--- a/src/components/EditorTab.css
+++ b/src/components/EditorTab.css
@@ -1,5 +1,6 @@
 .editor-tab {
-    height: 100%;
+    height: 90%;
+    max-height: 92%;
     padding: 1rem;
     background-color: #fff;
     border: 1px solid var(--color-border-gray);
@@ -7,7 +8,6 @@
   }
   
   .editor-input {
-    min-height: 400px;
     outline: none;
     font-size: 1rem;
     line-height: 1.6;
