--- a/src/components/MainLayout.css
+++ b/src/components/MainLayout.css
@@ -1,5 +1,5 @@
 .main-layout {
-  height: 90%;
+  flex: 1;
   display: flex;
   flex-direction: row;
   overflow: hidden;
@@ -7,29 +7,27 @@
 
 .left-panel {
   flex: 0 0 75%;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
 }
 
 .right-panel {
-  flex: 0 0 25%;
-  display: flex;
+  max-height: 92%;
   flex-direction: column;
   border-left: 1px solid var(--color-border-gray, #DDD);
   background-color: var(--color-background-light, #F4F6F8);
+  overflow: hidden;
 }
 
   
   .top-right {
-    flex: 0 0 30%;
-    padding: 1rem;
+    height: 22.5%;
     border-bottom: 1px solid var(--color-border-gray, #DDD);
   }
   
   .bottom-right {
-    flex: 1;
-    padding: 1rem;
+    height: 70%;
     overflow-y: auto;
   }
   
